--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -22,6 +22,7 @@
     "@theia/preferences": "^0.3.0",
     "@theia/process": "^0.3.0",
     "@theia/python": "^0.3.1",
+    "@theia/search-in-workspace": "^0.0.0",
     "@theia/terminal": "^0.3.0",
     "@theia/typescript": "^0.3.1",
     "@theia/userstorage": "^0.3.0",
